--- a/model/train_yolov7_object_detection_on_custom_data.ipynb
+++ b/model/train_yolov7_object_detection_on_custom_data.ipynb
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -58,41 +58,14 @@
         "id": "JGJspIl90XhV",
         "outputId": "367ccff8-b24e-4e1a-9ead-5620f38b8f7a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mon Oct 23 10:02:23 2023       \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 535.113.01             Driver Version: 535.113.01   CUDA Version: 12.2     |\n",
-            "|-----------------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                      |               MIG M. |\n",
-            "|=========================================+======================+======================|\n",
-            "|   0  NVIDIA GeForce GTX 1650        Off | 00000000:01:00.0  On |                  N/A |\n",
-            "| N/A   50C    P8               2W /  30W |     54MiB /  4096MiB |     17%      Default |\n",
-            "|                                         |                      |                  N/A |\n",
-            "+-----------------------------------------+----------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                            |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
-            "|        ID   ID                                                             Usage      |\n",
-            "|=======================================================================================|\n",
-            "|    0   N/A  N/A      2736      G   /usr/lib/xorg/Xorg                           53MiB |\n",
-            "+---------------------------------------------------------------------------------------+\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "!nvidia-smi"
+        "# !nvidia-smi"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -100,12 +73,20 @@
         "id": "nD-uPyQ_2jiN",
         "outputId": "4daaf7c1-1505-4781-bfab-37679c1a384b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/yolov7\n"
+          ]
+        }
+      ],
       "source": [
         "# Download YOLOv7 repository and install requirements\n",
         "\n",
         "# !git clone https://github.com/WongKinYiu/yolov7\n",
-        "# %cd yolov7\n",
+        "%cd yolov7\n",
         "# !pip install -r requirements.txt\n",
         "\n",
         "# current version of YOLOv7 is not compatible with pytorch>1.12.1 and numpy>1.20.1\n",
@@ -113,8 +94,8 @@
         "# you can track the progress here: https://github.com/roboflow/notebooks/issues/27\n",
         "\n",
         "# !git clone https://github.com/SkalskiP/yolov7.git\n",
-        "# %cd yolov7\n",
-        "# !git checkout fix/problems_associated_with_the_latest_versions_of_pytorch_and_numpy\n",
+        "%cd yolov7\n",
+        "!git checkout fix/problems_associated_with_the_latest_versions_of_pytorch_and_numpy\n",
         "# !pip install -r requirements.txt"
       ]
     },
@@ -131,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -144,6 +125,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/yolov7\n",
             "loading Roboflow workspace...\n",
             "loading Roboflow project...\n"
           ]
@@ -152,7 +134,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Downloading Dataset Version Zip in cat_dog_crawling-2 to yolov7pytorch:: 100%|██████████| 17022/17022 [00:01<00:00, 10229.98it/s]"
+            "Downloading Dataset Version Zip in cat_dog_crawling-2 to yolov7pytorch:: 100%|██████████| 17022/17022 [00:01<00:00, 8823.05it/s] "
           ]
         },
         {
@@ -167,7 +149,7 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "Extracting Dataset Version Zip to cat_dog_crawling-2 in yolov7pytorch:: 100%|██████████| 1535/1535 [00:00<00:00, 7339.75it/s]\n"
+            "Extracting Dataset Version Zip to cat_dog_crawling-2 in yolov7pytorch:: 100%|██████████| 1535/1535 [00:00<00:00, 7031.40it/s]\n"
           ]
         }
       ],
@@ -176,6 +158,7 @@
         "\n",
         "#!pip install roboflow\n",
         "\n",
+        "%cd yolov7\n",
         "from roboflow import Roboflow\n",
         "rf = Roboflow(api_key=\"7kIgVpnvd8c5pAl1n1ad\")\n",
         "# project = rf.workspace(\"cedulas-real\").project(\"real-cedulas\")\n",
@@ -212,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -226,35 +209,19 @@
           "output_type": "stream",
           "text": [
             "[Errno 2] No such file or directory: '/content/yolov7'\n",
-            "/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/yolov7/yolov7\n",
-            "--2023-10-22 09:35:00--  https://github.com/WongKinYiu/yolov7/releases/download/v0.1/yolov7_training.pt\n",
-            "Resolvendo github.com (github.com)... 20.201.28.151\n",
-            "Conectando-se a github.com (github.com)|20.201.28.151|:443... conectado.\n",
-            "A requisição HTTP foi enviada, aguardando resposta... 302 Found\n",
-            "Localização: https://objects.githubusercontent.com/github-production-release-asset-2e65be/511187726/13e046d1-f7f0-43ab-910b-480613181b1f?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20231022%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20231022T123500Z&X-Amz-Expires=300&X-Amz-Signature=c5f677981f9c54bcf26ae0b225f97838000eb8c8aec41e905b3af619d8cd0548&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=511187726&response-content-disposition=attachment%3B%20filename%3Dyolov7_training.pt&response-content-type=application%2Foctet-stream [redirecionando]\n",
-            "--2023-10-22 09:35:01--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/511187726/13e046d1-f7f0-43ab-910b-480613181b1f?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20231022%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20231022T123500Z&X-Amz-Expires=300&X-Amz-Signature=c5f677981f9c54bcf26ae0b225f97838000eb8c8aec41e905b3af619d8cd0548&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=511187726&response-content-disposition=attachment%3B%20filename%3Dyolov7_training.pt&response-content-type=application%2Foctet-stream\n",
-            "Resolvendo objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.111.133, ...\n",
-            "Conectando-se a objects.githubusercontent.com (objects.githubusercontent.com)|185.199.108.133|:443... conectado.\n",
-            "A requisição HTTP foi enviada, aguardando resposta... 200 OK\n",
-            "Tamanho: 75628875 (72M) [application/octet-stream]\n",
-            "Salvando em: ‘yolov7_training.pt.1’\n",
-            "\n",
-            "yolov7_training.pt. 100%[===================>]  72,12M  7,41MB/s    em 10s     \n",
-            "\n",
-            "2023-10-22 09:35:11 (7,01 MB/s) - ‘yolov7_training.pt.1’ salvo [75628875/75628875]\n",
-            "\n"
+            "/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model\n"
           ]
         }
       ],
       "source": [
         "# # download COCO starting checkpoint\n",
-        "# %cd /content/yolov7\n",
+        "%cd /content/yolov7\n",
         "# !wget https://github.com/WongKinYiu/yolov7/releases/download/v0.1/yolov7_training.pt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -268,14 +235,15 @@
           "output_type": "stream",
           "text": [
             "[Errno 2] No such file or directory: '/content/yolov7'\n",
-            "/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/yolov7\n"
+            "/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model\n",
+            "python: can't open file '/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/train.py': [Errno 2] No such file or directory\n"
           ]
         }
       ],
       "source": [
         "# run this cell to begin training\n",
         "%cd /content/yolov7\n",
-        "# !python train.py --batch 7 --epochs 2 --data {dataset.location}/data.yaml --weights 'yolov7_training.pt' --device 0"
+        "!python train.py --batch 4 --epochs 1 --data {dataset.location}/data.yaml --weights 'yolov7_training.pt' --device 0"
       ]
     },
     {
@@ -293,48 +261,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "N4cfnLtTCIce"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Namespace(weights=['runs/train/exp3/weights/best.pt'], source='/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/yolov7/dogs-or-cats-1/test/images', img_size=640, conf_thres=0.3, iou_thres=0.45, device='', view_img=False, save_txt=False, save_conf=False, nosave=False, classes=None, agnostic_nms=False, augment=False, update=False, project='runs/detect', name='exp', exist_ok=False, no_trace=False)\n",
-            "YOLOR 🚀 b2a7de9 torch 2.1.0+cu121 CUDA:0 (NVIDIA GeForce GTX 1650, 3903.875MB)\n",
-            "\n",
-            "Fusing layers... \n",
-            "RepConv.fuse_repvgg_block\n",
-            "RepConv.fuse_repvgg_block\n",
-            "RepConv.fuse_repvgg_block\n",
-            "IDetect.fuse\n",
-            "/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/train-yolov7/lib/python3.11/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3526.)\n",
-            "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
-            "Model Summary: 314 layers, 36487166 parameters, 6194944 gradients, 103.2 GFLOPS\n",
-            " Convert model to Traced-model... \n",
-            " traced_script_module saved! \n",
-            " model is traced! \n",
-            "\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/yolov7/detect.py\", line 196, in <module>\n",
-            "    detect()\n",
-            "  File \"/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/yolov7/detect.py\", line 57, in detect\n",
-            "    dataset = LoadImages(source, img_size=imgsz, stride=stride)\n",
-            "              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/yolov7/utils/datasets.py\", line 154, in __init__\n",
-            "    assert self.nf > 0, f'No images or videos found in {p}. ' \\\n",
-            "           ^^^^^^^^^^^\n",
-            "AssertionError: No images or videos found in /home/mercedes/Documentos/GRADUACAO-UFPA/07Bloco[2023.2-2023.4]/Inteligencia_Computacional[Aldebaro]/Atividades/Trab.03/model/yolov7/dogs-or-cats-1/test/images. Supported formats are:\n",
-            "images: ['bmp', 'jpg', 'jpeg', 'png', 'tif', 'tiff', 'dng', 'webp', 'mpo']\n",
-            "videos: ['mov', 'avi', 'mp4', 'mpg', 'mpeg', 'm4v', 'wmv', 'mkv']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Run evaluation\n",
-        "!python detect.py --weights runs/train/exp3/weights/best.pt --conf 0.3 --source {dataset.location}/test/images"
+        "!python detect.py --weights runs/train/train03/weights/best.pt --conf 0.3 --source {dataset.location}/test/images"
       ]
     },
     {
